
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






struct inet6_dev {int* rndid; } ;


 int get_random_bytes (int*,int) ;

__attribute__((used)) static void ipv6_regen_rndid(struct inet6_dev *idev)
{
regen:
 get_random_bytes(idev->rndid, sizeof(idev->rndid));
 idev->rndid[0] &= ~0x02;
 if (idev->rndid[0] == 0xfd &&
     (idev->rndid[1]&idev->rndid[2]&idev->rndid[3]&idev->rndid[4]&idev->rndid[5]&idev->rndid[6]) == 0xff &&
     (idev->rndid[7]&0x80))
  goto regen;
 if ((idev->rndid[0]|idev->rndid[1]) == 0) {
  if (idev->rndid[2] == 0x5e && idev->rndid[3] == 0xfe)
   goto regen;
  if ((idev->rndid[2]|idev->rndid[3]|idev->rndid[4]|idev->rndid[5]|idev->rndid[6]|idev->rndid[7]) == 0x00)
   goto regen;
 }
}
